[tool.poetry]
name = "async-api-for-portfolio"
version = "0.1.0"
description = ""
authors = ["Dmitry Patin <multik.patin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.3"
backoff = { version = "^2.2.1", optional = true }
elasticsearch = {extras = ["async"], version = "^8.12.1"}
fastapi = { version = "^0.110.0", optional = true }
uvicorn = { version = "^0.28.0", optional = true }
redis = { version = "^5.0.3", optional = true }
gunicorn = {version = "^21.2.0", optional = true}

[tool.poetry.extras]
api = [
    "elasticsearch",
    "redis",
    "fastapi",
    "gunicorn",
    "uvicorn",
]
test = [
    "elasticsearch",
    "redis",
    "backoff"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pre-commit = "^3.6.2"
mypy = "^1.9.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "0.21.1"
aiohttp = "^3.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "UP", # pyupgrade
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "B905",
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

fixable = ["ALL"]
unfixable = []

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "tests",
    "dist",
    "node_modules",
    "venv",
    "*/settings.py",
    "*/migrations/",
    "*/config/components/",
    "tasks",
]
per-file-ignores = { }

line-length = 80

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.mypy]
python_version = "3.11"
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'tests',
    'dist',
    'node_modules',
    'venv',
    '*/settings.py',
    '*/migrations/',
    'tasks',
]
plugins = [
  "pydantic.mypy"
]

warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

follow_imports = "silent"
show_error_codes = true

check_untyped_defs = true

no_implicit_reexport = true
no_implicit_optional = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true
disallow_any_generics = true
disallow_any_unimported = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
